# mcp-server-openwrt

./: .gitignore  Dockerfile  LICENSE  README.md  manifest.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
openwrt_mcp/: __init__.py  client.py  main.py  schemas.py  server.py
openwrt_mcp/tools/: __init__.py  _common.py  dhcp.py  firewall.py  network.py  opkg.py  service.py  system.py  uci.py  wireless.py
tests/: test_parsers.py  test_smoke.py
