[project]
name = "mcp-server-openwrt"
version = "0.1.0"
description = "MCP server for OpenWrt routers over SSH"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.9,<3.0",
    "structlog>=24.0,<25.0",
    "paramiko>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.9.0,<1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Add repo root to sys.path so `from openwrt_mcp.X import Y` works
# without a separate `pip install -e .` step.
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
